# afdb

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
examples/: api_server.rs  demo.rs  server.rs
src/: api.rs  catalog.rs  config.rs  lib.rs  mvcc.rs  org.rs  persona.rs  policy.rs  raci.rs  types.rs  util.rs
src/query/: mod.rs  operators.rs  planner.rs
src/semantic/: mod.rs  pipeline.rs
src/storage/: columnsegment.rs  compactor.rs  memtable.rs  mod.rs  rowsegment.rs  wal.rs
src/vector/: flat.rs  hnsw.rs  mod.rs
tests/: integration.rs
web/: Dockerfile  index.html  package.json
web/src/: main.tsx
web/src/api/: client.ts
web/src/store/: session.ts
web/src/ui/: App.tsx  Contracts.tsx  Ingestion.tsx  Onboarding.tsx  OrgUnits.tsx  Query.tsx  RoleAssume.tsx  Taxonomy.tsx
