
[package]
name = "afdb"
version = "0.1.0"
edition = "2021"

[lib]
name = "afdb"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
thiserror = "1"
parking_lot = "0.12"
bytes = "1"
rand = "0.8"
simd-adler32 = "0.3"

smallvec = "1"
ahash = "0.8"
