
[package]
name = "afdb"
version = "0.1.0"
edition = "2021"

[lib]
name = "afdb"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
thiserror = "1"
parking_lot = "0.12"
bytes = "1"
rand = "0.8"
simd-adler32 = "0.3"

smallvec = "1"
ahash = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
regex = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
axum = { version = "0.7", features = ["macros", "json", "tokio"] }
